Fix flex overlapping

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
 body {
   font-family: sans-serif;
-  background: #222;
+  background: #1f1f1f;
   color: white;
 }
